--- a/views/base.pug
+++ b/views/base.pug
@@ -1,1 +1,24 @@
-h1 Tommy Wayne testing
+doctype html
+html
+    head
+        meta(charset="UTF-8")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet", href="css/style.css")
+        link(rel="shortcut icon", type="image/png" href="img/favicon.png")
+        link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Lato:300,300i,700")
+        title Natours | #{title}
+    
+    body 
+        // Header
+        include _header
+
+        // Content
+        block content
+            h1 content block
+        //- section.overview
+        //-     h1=tour
+
+        // Footer
+        include _footer
+       
+        
