finished the tour details page

--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,4 +1,75 @@
 extends base
 
+include _mixins
+
 block content
-    h1 Test tour  
+    section.section-header
+        .header__hero
+            .header__hero-overlay &nbsp;
+            img.header__hero-img(src=`/img/tours/${tour.imageCover}`, alt=`${tour.name}`)
+
+        .heading-box
+            h1.heading-primary
+                span= `${tour.name} tour`
+            .heading-box__group
+                .heading-box__detail
+                    svg.heading-box__icon
+                        use(xlink:href='/img/icons.svg#icon-clock')
+                    span.heading-box__text= `${tour.duration} days`
+                .heading-box__detail
+                    svg.heading-box__icon
+                        use(xlink:href='/img/icons.svg#icon-map-pin')
+                    span.heading-box__text= tour.startLocation.description
+
+    section.section-description
+        .overview-box
+            div
+                .overview-box__group
+                    h2.heading-secondary.ma-bt-lg Quick facts
+                    - const date = tour.startDates[0].toLocaleString('en-us', {month: 'long', year: 'numeric'})
+                    +overviewBox('Next date',date, 'calendar')
+                    +overviewBox('Difficulty',tour.difficulty,'trending-up')
+                    +overviewBox('Participants', `${tour.maxGroupSize} people`, 'user')
+                    +overviewBox('Rating',`${tour.ratingsAverage} / 5`, 'star')
+
+                .overview-box__group
+                    h2.heading-secondary.ma-bt-lg Your tour guides
+
+                    each guide in tour.guides
+                        .overview-box__detail
+                            img.overview-box__img(src=`/img/users/${guide.photo}`, alt=`${guide.name}`)
+                            - if(guide.role === 'lead-guide')
+                                span.overview-box__label Lead guide
+                            - if(guide.role === 'guide')
+                                span.overview-box__label Tour guide
+                            span.overview-box__text= guide.name
+
+        .description-box
+            h2.heading-secondary.ma-bt-lg=`About ${tour.name} tour`
+            - const paragraphs = tour.description.split('\n');
+            each paragraph in paragraphs
+                p.description__text= paragraph
+
+    section.section-pictures
+        each image, index in tour.images
+            .picture-box
+                img.picture-box__img(src=`/img/tours/${image}`, alt=`${tour.name} ${index + 1} Tour `, class=`picture-box__img--${index + 1}`)
+
+    section.section-map
+        #map
+
+    section.section-reviews
+        .reviews
+            each review in tour.reviews
+                +reviewBox(review)
+
+    section.section-cta
+        .cta
+            .cta__img.cta__img--logo
+                img(src='/img/logo-white.png', alt='Natours logo')
+            img.cta__img.cta__img--1(src=`/img/tours/${tour.images[0]}`, alt='Tour picture')
+            img.cta__img.cta__img--2(src=`/img/tours/${tour.images[1]}`, alt='Tour picture')
+            .cta__content
+                h2.heading-secondary What are you waiting for?
+                p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
+                button.btn.btn--green.span-all-rows Book tour now!
