--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -9,3 +9,4 @@ footer.footer
         li: a(href="#") Contact
     p.footer__copyright &copy; by Tomiwa Obanla. All rights reserved.
 
+    script(src="/js/mapBox.js")
