--- a/views/_header.pug
+++ b/views/_header.pug
@@ -10,5 +10,5 @@ header.header
                 img.nav__user-img(src=`/img/users/${user.photo}` alt=`Photo of ${user.name}`)
                 span= user.name.split(' ')[0]
         else
-            a.nav__el(href='/login') Login                   
-            a.nav__el.nav__el--ctal(href='#') Sign up
+            a.nav__el(href='/login') Login                  
+            a.nav__el.nav__el--cta(href='#') Sign up 
