--- a/views/base.pug
+++ b/views/base.pug
@@ -21,9 +21,7 @@ html
 
         // Footer
         include _footer
-            script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js")
-            script(src="/js/mapBox.js")
-            script(src="/js/login.js")
+            script(src="/js/bundle.js")
 
        
         
