--- a/views/base.pug
+++ b/views/base.pug
@@ -21,6 +21,7 @@ html
 
         // Footer
         include _footer
+            script(src="https://js.stripe.com/v3/")
             script(src="/js/bundle.js")
 
 
